# tnlearn

./: .gitignore  CHANGELOG.md  LICENSE  Poly_data_test.ipynb  Poly_tensor_regressor.py  README.md  cliff.toml  commitlint.config.js  neurons_v2.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_gpu.txt  setup.py  setup_gpu.py
.github/workflows/: python-app.yml  unittest.yml
benchmark/: TC_densenet.py
benchmark/classification/: benchmark_1.py  benchmark_2.py  benchmark_3.py  dataset.py
benchmark/image_benchmark_polyregressor/: TC_Googlenet.py  TC_Resnet.py  TC_densenet.py  TC_senet.py  readme.md
benchmark/regression/: benchmark_1.py  benchmark_2.py  benchmark_3.py  (+1 more)
examples/: Poly_demo.py  epsilon_high.h5  example1.py  example_classification.py  example_classification_comp.py  example_classification_gpu.py  example_drsr.py  example_regression.py  example_regression_comp.py  example_regression_gpu.py  example_rl_regression.py  mlpclassifier.py  mlpregressor.py  new_example.py  quick_import_check_gpu.py  regressor.py
tests/: test_base.py  test_mlpclassifier.py  test_mlpregressor.py  test_preprocessing.py  test_regressor.py  test_tncnn.py  test_tnrnn.py  test_tntransformer.py
tnlearn/: Poly_tensor_regressor.py  TN_base.py  __init__.py  activation_function.py  base.py  base1.py  loss_function.py  mlpclassifier.py  mlpregressor.py  neurons.py  optimizer.py  poly_regressor.py  preprocessing.py  regressor.py  rl_regressor.py  seeds.py  utils.py  visualize.py
tnlearn_gpu/: __init__.py  mlpclassifier_gpu.py  mlpregressor_gpu.py
(+28 files in other folders)
