[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tnlearn"
dynamic = ["version"]
description = "A Python package that uses task-based neurons to build neural networks."
readme = "README.md"
authors = [{ name = "Meng WANG", email = "wangmeng22@stu.hit.edu.cn" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.19.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "sympy>=1.7",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",
    "ipython>=8.0.0",
    "torchinfo>=1.5.0",
    "h5py>=3.1.0",
    "requests>=2.28.0",
    "setuptools>=61.0.0",
]

[project.urls]
Repository = "https://github.com/NewT123-WM/tnlearn"

[tool.setuptools.dynamic]
version = { attr = "tnlearn.__version__" }

[tool.setuptools.packages.find]
include = ["tnlearn", "tnlearn.*"]